<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Grade1ExamActivity">

    <Button
        android:id="@+id/bt_EMG1_grade_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/EMG1_grade_select_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_EMG1_prev_element"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bt_EMG1_prev_element"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/EMG1_prev_element_button_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_EMG1_grade_select"
        app:layout_constraintEnd_toStartOf="@+id/bt_EMG1_reset_exam"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bt_EMG1_reset_exam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/EMG1_reset_exam_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/bt_EMG1_prev_element"
        app:layout_constraintEnd_toStartOf="@+id/bt_EMG1_next_element"
        app:layout_constraintStart_toEndOf="@+id/bt_EMG1_prev_element" />

    <Button
        android:id="@+id/bt_EMG1_next_element"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="50dp"
        android:text="@string/EMG1_next_element_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/bt_EMG1_reset_exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_EMG1_reset_exam" />
</android.support.constraint.ConstraintLayout>